k8s/aldous-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aldous
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aldous
  template:
    metadata:
      labels:
        app: aldous
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: php
        image: localhost:5000/aldous:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        securityContext:
          runAsNonRoot: true
          runAsUser: 82
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
