k8s/aldous-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aldous
spec:
  selector:
    app: aldous
  ports:
    - port: 80
      targetPort: 8000
