k8s/aldous-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aldous-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: oidc-protection
spec:
  tls:
    - hosts:
        - aldous.info
        - "*.aldous.info"
      secretName: cloudflare-origin-cert
  rules:
    - host: aldous.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aldous
                port:
                  number: 80
